stylesheets/index.less
.container-fluid {
  padding: 0
}

.masthead {
  width: 91.5%;
  margin-top: 145px;
  margin-bottom: 150px
}

.buytickets {
  width: 157%;
  margin-top: 193px;
  margin-left: -90px
}

.hilite {
  color: @menuText;
  &.email {
    text-decoration: underline;
  }
}

a.hilite:hover {
  color: @menuText;
}

.titleImageContainer {
  height: 130px;
  width: 775px;
  padding-top: 35px;
  margin:0 auto 30px;
  text-align: center;
  text-transform: uppercase;
  font-weight: 500;
  background: url(/images/2017/lances.svg) no-repeat 50% top;
  color: white;
}

.titleImage {
  height: 60px;
  width: auto;
  display: block;
  margin: 0 auto
}

#footer {
  text-align: center;
}

.speaker-row {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
  text-transform: uppercase;
  font-size: 18px;
  line-height: 1.2em;
  max-width: 760px;
  margin: 0 auto 200px;

  .speaker-box {
    text-align: center;
    width: 150px;
    margin: 30px 20px;

    img {
      width: 150px;
      height: auto;
      margin: 0 0 15px;
      display: block;
    }

  }

}

.about-title {
  position: relative;

  .peggy {
    width: 46%;
    height: auto;
    position: absolute;
    top: -120%;
    left: 2%;
  }

  .fuobe1 {
    width: 10%;
    height: auto;
    position: absolute;
    top: -100%;
    right: 20%;
  }
}

.about-text-container {
  display: flex;
  flex-direction: row;
  width: 50%;
  max-width: 760px;
  margin: 0 auto;
  clear: both;
  font-size: 21px;
  line-height: 1.2em;
  justify-content: space-around;

  .about-text-column {
    width: 50%;
    padding: 0 15px;

    p {
      margin: 0 0 1.5em;
    }
  }
}

.sponsors-title {
  margin-top: 100px;
}

.about-text {
  font-size: 21px;
  line-height: 1.2em;

  p {
    margin: 0 0 1.5em;
  }
}

.tickets-title {
  margin: 50px 0 200px;
  position: relative;

  .fuobe2 {
    position: absolute;
    width: 15%;
    top: 45%;
    right: 15%;
  }
}

.sponsor-row {
  clear: both;

  .cm-sponsor-box {
    height: 120px;
    text-align: center;
    img {
      display: inline-block;
      vertical-align: middle;
    }
    &:before {
      content: '';
      height: 100%;
      display: inline-block;
      vertical-align: middle;
    }
  }
}

.tickets-box {
  table {
    width: 100%;
    font-size: 18pt;

    thead tr td {
      padding-bottom: 15px;

      &.venue-column {
        width: 60%;
      }
    }

    td {
      width: 20%;
      padding: 10px;
    }

    p {
      margin: 0;
      line-height: 20pt
    }

    .ticket-row-odd {
      td {
        background: @row-odd-fill;
        cursor: pointer;
      }

    }

    .ticket-row-even {
      td {
        color: @row-even-color;
        background: @row-even-fill;
        cursor: pointer;
      }

    }

  }
  p.legend {
    text-align: right;
    font-size: 13pt;
  }
}

.speaker-image-container {
  height: 205px;
  margin-bottom: -60px;
}

.two {
  animation-duration: 20s;
  animation-name: spacejail-rotate-2
}

.three {
  animation-duration: 7s;
}

.speaker-link {
  cursor: hand;
}

.speaker-link-pg {
  cursor: hand;
}

.byline {
  font-size: 0.7em;
  line-height: 1.3em;
  text-transform: none;
  margin-top: -10px;
  font-weight: light;
}

.luchanaut {
  -webkit-animation: float2 5s ease-in-out infinite alternate;
  animation: float2 5s ease-in-out infinite alternate;
  position: absolute;
  left: 250px;
  top: 350px
}

.luchanaut2 {
  -webkit-animation: float3 14s ease-in-out infinite alternate;
  animation: float3 14s ease-in-out infinite alternate;
  position: absolute;
  right: 200px;
  top: 310px
}

.luchanaut3 {
  -webkit-animation: float 6s ease-in-out infinite alternate;
  animation: float 6s ease-in-out infinite alternate;
  width: 90%;
  margin-left: -30px
}

.luchanaut3shuttle {
  -webkit-animation: zoom 4s ease-in-out infinite alternate;
  animation: zoom 4s ease-in-out infinite alternate;
}

@import "parallax";

@media (max-width: 768px) {
  // stuff to show/hide on phones
  body {
    font-size: 14pt;
    line-height: 15pt
  }

  .titleImageContainer {
    height: 90px;
    width: 460px;
    padding-top: 22px;
    margin-bottom: 30px
  }

  .tickets-box {
    p {
      margin-left: 10px;
    }
    table {
      margin: 0 auto;
      width: 95%;
      cursor: pointer;
      td {
        font-size: 13pt;
        line-height: 14pt;
      }
    }
  }

  .masthead {
    margin: 60px auto 0 10px;
    width: 100%;
    display: block
  }

  .titleImage {
    height: 30px
  }

  .about-text-container {
    display: block;

    .about-text-column {
      width: 100%;
    }
  }

  .buytickets {
    margin: -50px auto 0 auto;
    width: 100%;
    display: block
  }

  .space-object {
    max-width: 20%
  }

  .skull {
    margin-top: 1700px;
    margin-left: -25px;
  }

  .shuttle4, .shuttle1 {
    margin-top: 10px;
  }

  .sponsor-row .cm-sponsor-box {
    height: 80px;
    img {
      height: auto;
      width: 200px;
    }
  }

  .speaker-row {
    font-size: 14pt;
  }

  .stars,
  .stars-deep {
    background-size: 200%
  }

}

@media (min-width: 768px) {
  // stuff to show on not-phones
  .luchanaut {
    width: 150px
  }

  .luchanaut2 {
    width: 200px
  }

  .stars,
  .stars-deep {
    background-size: 150%
  }

}

@media (min-width: 992px) {
  .luchanaut {
    width: 300px
  }

  .luchanaut2 {
    width: 250px
  }

}

@media (min-width: 1200px) {
  .stars,
  .stars-deep {
    background-size: 90%
  }

}

